@version $Id$

* 2.1.0 to be released 2008-12-XX

    2008-11-14
    * Implementation of DiscoveryAgent.retrieveDevices on MS stack

    2008-10-24
    * Authenticate and remove authentication/Non JSR-82 on MS Stack

    2008-10-16
    * Change license to Apache License, Version 2.0
    * Remove authentication/Non JSR-82 on WIDCOMM

* 2.0.3 released 2008-08-11

    2008-06-01 - 2008-08-11
    * Fixed 64K buffer limit on WIDCOMM Stack
    * Fixed ERROR_IO_INCOMPLETE on BlueSoleil Stack
    * Fixed services search on WIDCOMM to use 'and' for all UUID in query

    2008-05-01 - 2008-05-25
    * BlueCoveImpl.shutdown() API function
    * Supports IBM J9 (MIDP and PPRO 1.0) on Linux, Sun CDC on Windows XP
    * OBEX Operation Get supports InputStream

    2008-04-17
    * bluecove-emu: JSR 82 Emulator

    2008-04-08
    * Support Multiple Adapters and Bluetooth Stacks in same JVM

    2008-03-06
    * Fixed OBEX bug reciving Time Headers (Nokia)
    * Proper behaviour for concurrent DiscoveryAgent.searchServices, "bluetooth.sd.trans.max"

    2008-02-27
    * Configurable "bluecove.inquiry.duration" for MS stack and OSX

    2008-01-30 Vlad Skarzhevskyy
    * Fixed major start problem on Mac OS X
    * Fixed SDP SEQ8, SEQ16, UUID 16 and 36 bit
    * Allow to load x64 libraries on Windows and Linux

    2008-01-19 Vlad Skarzhevskyy
    *  bluecove-gpl: RFCOMM and L2CAP client on Linux BlueZ

    2008-01-12 Mina Shokry
    *  bluecove-gpl: Service discovery on Linux

* 2.0.2 released 2008-01-07

    2007-12-12
    * WIDCOMM RFCOMM and L2CAP Service can accept multiple connections

    2007-12-05
    * L2CAP, RFCOMM and OBEX server on Mac OS X

    2007-11-28
    * RFCOMM and L2CAP client on Mac OS X

    2007-11-19
    * WIDCOMM use BTW-6_1_0_1501-SDK, Fixed Service Attributes BOOLEAN, U_INT_8, INT_8, INT_16 and UINT_16

    2007-11-16
    * Fixed Service Attributes STRING to be UTF8

    2007-11-05